# xamr

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  XAMR_Quick_Start_Guide.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_dev.py  setup_rtd.sh  tox.ini
.github/workflows/: ci.yml  docs.yml
data/plt00000/: Header  job_info
data/plt00000/Level_0/: Cell_H  Nu_nd_D_00000  Nu_nd_H
data/plt00010/: job_info
data/plt00010/Level_0/: Cell_H
data/plt00010/Level_1/: Cell_D_00000  Cell_H
data/plt00020/: Header  job_info
data/plt00020/Level_0/: Cell_H
data/plt00020/Level_1/: Cell_D_00000  Cell_H
docs/: Makefile  README.md  conf.py  index.rst  make.bat  quick_start.md  requirements-rtd.txt  requirements.txt  serve_docs.py  testing.md
docs/api/: calculations.rst  dataarray.rst  dataset.rst  index.rst
docs/examples/: amr_visualization.rst  basic_usage.rst  index.rst  time_series_analysis.rst
docs/user_guide/: calculations.rst  getting_started.rst  index.rst  indexing.rst  time_series.rst
examples/: basic_example.py
tests/: __init__.py  conftest.py  test_integration.py  test_xamr.py
xamr/: __init__.py  core.py  utils.py
